@startuml
!theme crt-green
skinparam nodesep 150
hide empty members
left to right direction

package "<<agr Course>>"{
    class Course<<entity>><<root>>{}
    class Code <<vo>>
    class Description<<vo>>{}
    class Title<<vo>>{}
    class State<<vo>><<enum>>{}

    Course  --> "1" State
    Course  -down-> "1" Title
    Course  -down-> "1" Description
    Course  -down-> "1" Code
    Course --> "*" Teacher : is ruled by


}

package "<<agr Exam>>"{
    class Exam  <<entity>><<root>> {}
    class ExamTitle <<vo>>{}
    class ExamHeader <<entity>>{}
    class ExamHeaderTextualDescription <<vo>>{}
    class ExamSection <<entity>>{}
    class ExamSectionTextualDescription <<vo>>{}
    class ExamQuestion <<entity>>{}
    class ExamQuestionStatement <<vo>>{}
    class ExamQuestionNumber <<vo>>{}
    class ExamQuestionValue <<vo>>{}
    class ExamQuestionSolution<<vo>>{}
    class ExamQuestionType <<vo>><<enum>>{}

    Teacher --> "*" Exam : creates
    Exam --> "1" ExamTitle
    Exam --> "1" ExamHeader
    ExamHeader --> "0..1" ExamHeaderTextualDescription
    Exam --> "*" ExamSection : have
    ExamSection --> "0..1" ExamSectionTextualDescription
    ExamQuestion --> "1" ExamQuestionValue
    ExamQuestion --> "1" ExamQuestionNumber
    ExamSection --> "*" ExamQuestion : have
    ExamQuestion --> "1" ExamQuestionSolution
    ExamQuestion --> "1" ExamQuestionType
    ExamQuestion --> "1" ExamQuestionStatement
    Exam --> "1" Course : belongs to
}

package "<<agr Student>>"{

    class Student<<entity>><<root>>{}
    class MechanographicalNumber<<vo>>{}
    class StudentTaxPayerNumber<<vo>>{}
    class StudentDateOfBirth<<vo>>{}

    Student  --> "1" MechanographicalNumber
    Student "1" --> SystemUser
    'Student <-- "*" Lecture : participates
    Student --> "1" StudentDateOfBirth
    Student --> "1" StudentTaxPayerNumber
}

package "<<agr CourseEnrollment>>"{
    class CourseEnrollment <<entity>><<root>>{}
    class StudentEnrollmentState <<vo>><<enum>>{}
    class CourseEnrollmentDate <<vo>>{}
    CourseEnrollment --> "1" Course : applied to
    CourseEnrollment --> "1" StudentEnrollmentState
    CourseEnrollment --> "1" CourseEnrollmentDate
    Student "1" <-- CourseEnrollment: applies to
}
hide circle
hide fields

@enduml